src/objects/Mana_Household_Production_Record__c.object
<CustomObject>
    <fields>
        <fullName>which__c</fullName>
        <label>which suppies recibed</label>
        <picklist>
            <picklistValues>
                <fullName>Semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fertilizantes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herramientas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>which_entity__c</fullName>
        <label>which entity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wich_other_supplies__c</fullName>
        <label>wich other supplies</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zona__c</fullName>
        <label>zona</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Mana Household Production Record</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Donacion_Destination_Amount__c</columns>
        <columns>garden_duration__c</columns>
        <columns>Household__c</columns>
        <columns>Trueque_Destination_Amount__c</columns>
        <columns>Venta_Destination_Amount__c</columns>
        <columns>Total_production_Kg__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Mana Household Production Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mana Household Production Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>